# ada-turbo-mcp

./: .gitignore  LICENSE  README.md  README.tr.md  index.html  pyproject.toml  server.py
animasyonlar/: anim.py
examples/: mcp_config.json
karakterler/: export.py
office-bina/: bina.py  chargen.py
office-zon/: env.py
references/: analytics-product-tech.md  client-operations.md  marketing-growth.md  musteri-operasyon.md
skill/: ada-turbo-skill.skill
skill/kaynak/: README.md  SKILL.md  SKILL_en.md
skill/kaynak/references/: analitik-urun-teknik.md  creative-team.md  pazarlama-buyume.md  strategy-brand.md  strateji-marka.md  yaratici-ekip.md
src/: mcp_server.py  utils.py  web_server.py  workflow_manager.py
tests/: test_mcp.py
