[project]
name = "ada-creative-co-mcp"
version = "1.0.0"
description = "ADA Creative Co. ajans işletim sistemi — MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
ada-creative-co-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "src/**/*.py", "references/*.md", "index.html", "karakterler/**/*", "animasyonlar/**/*"]
